--- a/index.html
+++ b/index.html
@@ -39,11 +39,13 @@
 
 <p><strong>Mentor :</strong> Sandip Saha (Jadavpur University, Kolkata)</p>
 
-<p><strong>Educational Backgroud :</strong> 78.2% ; Higher Secondary : 82.6% (Ranked 1 in school)</p>
+<p><strong>Educational Backgroud :</strong> Madhyamik 78.2% ; Higher Secondary : 82.6% (Ranked 1 in school)</p>
 
-<p><strong>Present Course :</strong> Bengali (UG I) Bagnan College</p>
+<p><strong>Present Course :</strong> Bengali (UG I), Bagnan College</p>
 
 <p align="justify"> Papiya is an inhabitant of Singerah - a remote village in the district of Howrah. Her father works in a small hotel located quite far away from the village and Papiya only gets to see him on the weekends. Fighting against abject poverty, Papiya managed to score 82.6 % marks in the H.S Examinations and stood first in her school. She joined Bagnan College in 2016 to pursue a bachelor’s in Bengali. Papiya is on her way to become the first graduate in her family and Srijan Sujan has decided to stand by her in her quest. </p>
+
+<p><em>To view the academic documents of Papiya Pramanick please download the zip file or the tar file from the link the top.</em></p>
         </section>
 
         <footer>
