--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p align="justify"> Papiya is an inhabitant of Singerah - a remote village in the district of Howrah. Her father works in a small hotel located quite far away from the village and Papiya only gets to see him on the weekends. Fighting against abject poverty, Papiya managed to score 82.6 % marks in the H.S Examinations and stood first in her school. She joined Bagnan College in 2016 to pursue a bachelor’s in Bengali. Papiya is on her way to become the first graduate in her family and Srijan Sujan has decided to stand by her in her quest. </p>
 
-<p><em>To view the academic documents of Papiya Pramanick please download the zip file or the tar file from the link the top.</em></p>
+<p style="font-size:14px"><em>To view the academic documents of Papiya Pramanick please download the zip file or the tar file from the link at the top.</em></p>
         </section>
 
         <footer>
