--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 <p><strong>Support Period :</strong> Beneficiary since 2016</p>
 
-<p><strong>Mentor :</strong> Sandip Saha (Geological Studies Unit, Indian Statistical Institute, Kolkata)</p>
+<p><strong>Mentor :</strong> Sanhita Modak (Netaji Subhas Engineering College, Kolkata)</p>
 
 <p><strong>Educational Backgroud :</strong> Madhyamik 78.2% ; Higher Secondary : 82.6% (Ranked 1 in school)</p>
 
