--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <p><strong>Mentor :</strong> Sanhita Modak (Prabhat Kumar College, Contai)</p>
 
-<p><strong>Educational Backgroud :</strong> Madhyamik 78.2% ; Higher Secondary : 82.6% (Ranked 1 in school)</p>
+<p><strong>Educational Backgroud :</strong> Madhyamik : 78.2% ; Higher Secondary : 82.6% (Ranked 1 in school)</p>
 
 <p><strong>Present Course :</strong> Bengali (UG I), Bagnan College</p>
 
